Update and rename index2.html to index.html

--- a/index.html
+++ b/index.html
@@ -215,6 +215,87 @@
     <hr>
 
     <h2>Pele - Brasil</h2>
+    <div>
+        <img class="cuatro" style="text-align: center;" src="https://estaticos-cdn.prensaiberica.es/clip/e2fcd904-665d-49a3-a5df-e4bea4211ac6_alta-libre-aspect-ratio_default_0.jpg" alt="">
+    </div>
+    <p>Goles: 12 <br>
+        Mundiales: Cuatro - 1958 (seis goals), 1962 (un gol), 1966 (un gol), 1970 (cuatro goles) <br>
+        Partidos: 14</p>
+        <p>Pelé es el goleador más joven, el autor de una tripleta más joven, el jugador más joven de una final y el autor de un gol en la final <br>
+            más joven de la historia de los mundiales. Nada más y nada menos.
+        </p>
+        <div>
+            <iframe class="dos" src="https://www.youtube.com/embed/-S5Qa9qsQc4?si=A-Oj52F3m4h3S-av" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <hr>
+
+    <h2>Jurgen Klinsmann - Alemania</h2>
+       <div>
+           <img class="cuatro" style="text-align: center;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlsXJRLnBo4ajGQMEai9hngv4EzA9_o9ER9Q&s" alt="">
+       </div>
+       <p>Goles: 11 <br>
+        Mundiales: Tres - 1990 (tres goles), 1994 (cinco goles), 1998 (tres goles) <br>
+        Partidos: 17</p>
+        <p>Un verdadero símbolo del fútbol alemán: eficiente, efectivo, resolutivo...y goleador. El alemán brilló en 1990, cuando su país se <br>
+             quedó con el trofeo, pero siguió marcando en otras dos ediciones. Años más tarde se haría cargo del banquillo.</p>
+         <div>
+            <iframe class="dos" src="https://www.youtube.com/embed/HCr_XofOyP4?si=dUTl_QVJo7CjgK_q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>    
+         <hr>
+         <h2>Sandor Kocsis - Hungría</h2>
+         <div>
+            <img class="cuatro" style="text-align: center;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSIzBpS9PKhfq6nfr2kDDz-fd-f3Z75Ku9qAw&s" alt="">
+         </div>
+         <p>Goles: 11 <br>
+            Mundiales: Uno - 1954 <br>
+            Partidos: Cinco</p>
+        <p>Kocsis, conocido como Cabeza Dorada, pudo presumir de ser el atacante más mortífero de la historia de la Copa Mundial de <br>
+            la FIFA™, al marcar 11 goles en apenas cinco partidos en Suiza 1954. “Nunca ha habido nadie mejor de cabeza”, dijo Gusztáv <br>
+             Sebes para describir a su potente delantero. “Pero también era un delantero muy completo, que conservaba el balón arriba y <br>
+             podía rematar con las dos piernas”.</p>
+        <div>
+            <iframe class="dos" src="https://www.youtube.com/embed/VvrAJ0ntdzM?si=GNSd0vt3VA0w-PEc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <hr>
+
+    <h2>Gabriel Batistuta - Argentina</h2>
+        <div>
+            <img class="cuatro" style="text-align: center;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHKFu2WhporKPlXpEuKDlMRRGCOe7zAOmQ9g&s" alt="">
+        </div>
+        <p>Goles: 10 <br>
+            Mundiales: Tres - 1994 (cuatro goles), 1998 (cinco goles), 2002 (un gol) <br>
+            Partidos: 12</p>
+            <br>
+        <p>En su mejor momento de forma, Gabriel Batistuta fue uno de los atacantes más temidos de su generación. <br>
+<br>
+            El delantero argentino destacó por su capacidad para rematar con precisión y potencia con ambas piernas. Fue una pesadilla <br>
+             para las defensas rivales dado su poderío físico, velocidad en carrera y agilidad. Además, siempre supo aparecer en los <br>
+              momentos importantes. <br>
+        <br>
+            Antes de debutar en la Copa Mundial de la FIFA™, en Estados Unidos 1994, ya había ayudado a su selección a ganar dos <br>
+            ediciones consecutivas de la Copa América, 1991 y 1993, con goles en sendas finales. Por tanto, no es de extrañar que Batigol deslumbrara en su 
+            primer Mundial, pero lo mismo ocurriría cuatro años más tarde. Es el único jugador en marcar tripletes en dos ediciones diferentes. 
+            </p>
+            <div>
+                <iframe class="dos" src="https://www.youtube.com/embed/qM44W098GEA?si=4PyWix1OUbPKS21r&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <hr>
+
+        <h2>Teofilo Cubillas - Perú</h2>
+        <div>
+            <img class="cuatro" style="text-align: center;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqhoFFc3jdd_1uzOCfW1_nhQlVvpahwwX1kb3N0u_ALswcG6jEKtjlQsrs371mnU3mKEM&usqp=CAU" alt="">
+        </div>
+        <p>Goles: 10 <br>
+            Mundiales: Tres - 1970 (cinco goles), 1978 (cinco goles), 1982 (no marcó). <br>
+            Partidos: 13</p>
+        <p>La estadística indica que marcó muchos goles, pero la historia deja marcada otra cosa para uno de los jugadores más <br>
+            talentosos, líder una generación peruana de oro. Su gol ante Escocia, de tiro libre, en 1978, es uno de los más recordados de <br>
+             todos los tiempos.
+        </p>
+        <div>
+            <iframe class="dos" src="https://www.youtube.com/embed/LO_pTO9S2ec?si=gRgfN3lFrkPAPRdn&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    
     
 </div> 
 </html>
